Fixing bug in ipad where the links on the top are stuck as grey.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,7 +40,7 @@
 }
 
 .navbar ul li a:hover{
-    color: #888;
+    color: #fff;
 }
 
 
